use variables instead

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       // add x axis
       let x = d3.scaleLinear()
-        .domain([0, x_val_max])
+        .domain([x_val_min, x_val_max])
         .range([0, graph_width]);
 
       let x_axis = graph_elems
@@ -87,7 +87,7 @@
 
       // add y axis
       let y = d3.scaleLinear()
-        .domain([0, 0]) // start with all points collapsed on the bottom axis (they will animate to the correct location upon load)
+        .domain([y_val_min, y_val_min]) // start with all points collapsed on the bottom axis (they will animate to the correct location upon load)
         .range([graph_height, 0]);
 
       let y_axis = graph_elems
@@ -121,7 +121,7 @@
         .attr("r", 1);
 
       // animate data points to travel to their y-coordinate location from the bottom
-      y.domain([0, y_val_max]); // by first adjusting the domain of the y-axis
+      y.domain([y_val_min, y_val_max]); // by first adjusting the domain of the y-axis
 
       chart_background.select("#y_axis")
         .transition()
