--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
       graph_width = chart_area_width - chart_area_padding.left - chart_area_padding.right,
       graph_height = chart_area_height - chart_area_padding.top - chart_area_padding.bottom;
 
+    // define a parser for parsing csv columns representing datetimes (but
+    // formatted as strings) as the appropriate date objects
+    let parseDatetime = d3.timeParse("%Y-%m-%d %H:%M:%S");
+
     // set min and max values for axes
-    let x_val_min = 0,
-      x_val_max = 1440,
+    let x_val_min = parseDatetime('2020-09-01 0:00:00'),
+      x_val_max = parseDatetime('2020-09-01 23:59:59'),
       y_val_min = 0,
       y_val_max = 120;
 
@@ -98,7 +102,8 @@
       // filter the data to ensure none go outside the ranges of the axes
       function filterToWithinAxesRange(data) {
         return data.filter(function(point) {
-          return point.tripStartTime >= x_val_min && point.tripStartTime <= x_val_max && point.tripDuration >= y_val_min && point.tripDuration <= y_val_max;
+          let tripStartTime = parseDatetime(point.tripStartTime);
+          return tripStartTime >= x_val_min && tripStartTime <= x_val_max && point.tripDuration >= y_val_min && point.tripDuration <= y_val_max;
         });
       }
 
@@ -111,7 +116,7 @@
         .enter()
         .append("circle")
         .attr("cx", function(d) {
-          return x(d.tripStartTime)
+          return x(parseDatetime(d.tripStartTime))
         })
         .attr("cy", function(d) {
           return y(d.tripDuration)
@@ -136,7 +141,7 @@
         })
         .duration(2000)
         .attr("cx", function(d) {
-          return x(d.tripStartTime);
+          return x(parseDatetime(d.tripStartTime));
         })
         .attr("cy", function(d) {
           return y(d.tripDuration);
