--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
         .append('g')
         .attr("id", "x_axis")
         .attr("transform", "translate(0," + graph_height + ")")
-        .call(d3.axisBottom(x));
+        .call(d3.axisBottom(x)
+          .ticks(5)
+          .tickFormat(d3.timeFormat("%I:%M%p")));
 
       // add y axis
       let y = d3.scaleLinear()
