--- a/index.html
+++ b/index.html
@@ -83,12 +83,27 @@
         .domain([x_val_min, x_val_max])
         .range([0, graph_width]);
 
+      // specify where want x-axis tick marks placed
+      let x_axis_ticks = [
+        new Date('2020-09-01 02:00:00'),
+        new Date('2020-09-01 04:00:00'),
+        new Date('2020-09-01 06:00:00'),
+        new Date('2020-09-01 08:00:00'),
+        new Date('2020-09-01 10:00:00'),
+        new Date('2020-09-01 12:00:00'),
+        new Date('2020-09-01 14:00:00'),
+        new Date('2020-09-01 16:00:00'),
+        new Date('2020-09-01 18:00:00'),
+        new Date('2020-09-01 20:00:00'),
+        new Date('2020-09-01 22:00:00')
+      ];
+
       let x_axis = graph_elems
         .append('g')
         .attr("id", "x_axis")
         .attr("transform", "translate(0," + graph_height + ")")
         .call(d3.axisBottom(x)
-          .ticks(5)
+          .tickValues(x_axis_ticks)
           .tickFormat(d3.timeFormat("%I:%M%p")))
         .selectAll("text")
         .style("text-anchor", "end")
