adjust y-axis label

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       .attr("transform", "rotate(-90)")
       .attr("y", chart_area_padding.left / 2 - 5)
       .attr("x", -chart_area_padding.top - graph_height / 2)
-      .text("Trip Duration (In Minutes)")
+      .text("Trip Duration (Minutes)")
 
     // add  group that will contain chart elements
     let graph_elems = chart_background
