--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
       .attr("y", chart_area_padding.top / 2)
       .text("Bluebike Trip Duration By Time Of Day");
 
+    // add chart subtitle
+    chart_background.append("text")
+      .attr("text-anchor", "middle")
+      .attr("x", (graph_width / 2) + chart_area_padding.left)
+      .attr("y", 50)
+      .text("(All Massachusetts Rides, Sept 1, 2020)");
+
     // add x-axis label
     chart_background.append("text")
       .attr("text-anchor", "middle")
