--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     chart_background.append("text")
       .attr("text-anchor", "middle")
       .attr("x", (graph_width / 2) + chart_area_padding.left)
-      .attr("y", chart_area_padding.top / 2)
+      .attr("y", 30)
       .text("Bluebike Trip Duration By Time Of Day");
 
     // add chart subtitle
