--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       .attr("text-anchor", "middle")
       .attr("x", (graph_width / 2) + chart_area_padding.left)
       .attr("y", 50)
-      .text("(All Massachusetts Rides, Sept 1, 2020)");
+      .text("(All  Rides in Boston, Cambridge, Brookline, Somerville, Sept 1, 2020)");
 
     // add x-axis label
     chart_background.append("text")
