--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       .attr("text-anchor", "middle")
       .attr("x", (graph_width / 2) + chart_area_padding.left)
       .attr("y", 50)
+      .attr("font-size", 12)
       .text("(All  Rides in Boston, Cambridge, Brookline, Somerville, Sept 1, 2020)");
 
     // add x-axis label
