--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
     // generate a scatter plot for each sample of blue bike data (corresponding
     // to one day from each season)
     generateScatter("bluebikedata_2020-09-01.csv");
+    generateScatter("bluebikedata_2019-12-01.csv");
+    generateScatter("bluebikedata_2020-03-01.csv");
+    generateScatter("bluebikedata_2020-06-01.csv");
   </script>
 </body>
 
