--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       // define a datetime formatter for formmatting a date object in a way that is
       // cleanly readable as a date (specifically, "June 30, 2015")
-      let formatDatetime = d3.timeFormat("%B %d, %Y");
+      let formatDatetime = d3.timeFormat("%A, %B %d, %Y");
 
       // infer the date the bike data is describing based on the file name and
       // store this as a set of useful variables
@@ -72,8 +72,8 @@
         .attr("text-anchor", "middle")
         .attr("x", (graph_width / 2) + chart_area_padding.left)
         .attr("y", 50)
-        .attr("font-size", 12)
-        .text("(All  Rides in Boston, Cambridge, Brookline, Somerville, " + formatDatetime(bikeDataDate));
+        .attr("font-size", 11)
+        .text("(All  Rides in Boston, Cambridge, Brookline, Somerville on " + formatDatetime(bikeDataDate));
 
       // add x-axis label
       chart_background.append("text")
